[package]
name = "p2p-link"
version = "0.1.0"
authors = ["Daniel Olano <danielolanoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.16.2"
async-std = { version = "1.5.0", features = ["attributes"] }
futures = "0.3.4"
